--- a/GlassScan/project.properties
+++ b/GlassScan/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=Google Inc.:Glass Development Kit Preview:19
+android.library=false
+android.library.reference.1=../../../../eclipse-workspace/google-play-services_lib
