Glass Scan : project name, package name, renamed to eduScan

--- a/GlassScan/.project
+++ b/GlassScan/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GlassScan</name>
+	<name>EduScan</name>
 	<comment></comment>
 	<projects>
 	</projects>
