--- a/GlassScan/AndroidManifest.xml
+++ b/GlassScan/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eduglasses.glassscan"
+    package="com.eduglasses.eduscan"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
-            android:name="com.eduglasses.glassscan.LaunchActivity"
+            android:name="com.eduglasses.eduscan.LaunchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
@@ -33,11 +33,11 @@
                 android:resource="@xml/voice_trigger" />
         </activity>
         <activity
-            android:name="com.eduglasses.glassscan.capture.CameraActivity"
+            android:name="com.eduglasses.eduscan.capture.CameraActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.eduglasses.glassscan.capture.ShareActivity"
+            android:name="com.eduglasses.eduscan.capture.ShareActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
